fix: mobile horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -707,7 +707,7 @@ footer p{
     .footer-icons{
         flex-wrap:wrap;
     }
-    .about-image img{
+    .about-image{
         margin-top:0px;
         display:none;
     }
